vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__interface__tests__interface_lists-2.snap
---
source: vhdl_syntax/src/parser/productions/interface.rs
expression: "to_test_text(Parser::interface_list,\n\"\\\nsignal foo : in std_logic;\nbar : natural\")"
---
InterfaceList
  InterfaceObjectDeclaration
    Keyword(Signal)
    IdentifierList
      Identifier 'foo'
    Colon
    Keyword(In)
    SubtypeIndication
      Name
        NameDesignatorPrefix
          Identifier 'std_logic'
  SemiColon
  InterfaceObjectDeclaration
    IdentifierList
      Identifier 'bar'
    Colon
    SubtypeIndication
      Name
        NameDesignatorPrefix
          Identifier 'natural'
