vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__interface__tests__interface_lists-3.snap
---
source: vhdl_syntax/src/parser/productions/interface.rs
expression: "to_test_text(Parser::interface_list,\n\"\\\nsignal foo : in std_logic;\nconstant bar : natural;\nvariable xyz : var\")"
---
InterfaceList
  InterfaceObjectDeclaration
    Keyword(Signal)
    IdentifierList
      Identifier 'foo'
    Colon
    Keyword(In)
    SubtypeIndication
      Name
        NameDesignatorPrefix
          Identifier 'std_logic'
  SemiColon
  InterfaceObjectDeclaration
    Keyword(Constant)
    IdentifierList
      Identifier 'bar'
    Colon
    SubtypeIndication
      Name
        NameDesignatorPrefix
          Identifier 'natural'
  SemiColon
  InterfaceObjectDeclaration
    Keyword(Variable)
    IdentifierList
      Identifier 'xyz'
    Colon
    SubtypeIndication
      Name
        NameDesignatorPrefix
          Identifier 'var'
