vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__interface__tests__interface_lists.snap
---
source: vhdl_syntax/src/parser/productions/interface.rs
expression: "to_test_text(Parser::interface_list,\n\"\\\nconstant foo : std_logic;\nbar : natural\")"
---
InterfaceList
  InterfaceObjectDeclaration
    Keyword(Constant)
    IdentifierList
      Identifier 'foo'
    Colon
    SubtypeIndication
      Name
        NameDesignatorPrefix
          Identifier 'std_logic'
  SemiColon
  InterfaceObjectDeclaration
    IdentifierList
      Identifier 'bar'
    Colon
    SubtypeIndication
      Name
        NameDesignatorPrefix
          Identifier 'natural'
