vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__interface__tests__object_declaration-4.snap
---
source: vhdl_syntax/src/parser/productions/interface.rs
expression: "to_test_text(Parser::interface_declaration, \"constant a : out std_logic\")"
---
InterfaceObjectDeclaration
  Keyword(Constant)
  IdentifierList
    Identifier 'a'
  Colon
  Keyword(Out)
  SubtypeIndication
    Name
      NameDesignatorPrefix
        Identifier 'std_logic'
