vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__interface__tests__object_declaration-5.snap
---
source: vhdl_syntax/src/parser/productions/interface.rs
expression: "to_test_text(Parser::interface_declaration, \"a : inout std_logic\")"
---
InterfaceObjectDeclaration
  IdentifierList
    Identifier 'a'
  Colon
  Keyword(Inout)
  SubtypeIndication
    Name
      NameDesignatorPrefix
        Identifier 'std_logic'
