vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__interface__tests__object_declaration-6.snap
---
source: vhdl_syntax/src/parser/productions/interface.rs
expression: "to_test_text(Parser::interface_declaration, \"a : linkage std_logic\",)"
---
InterfaceObjectDeclaration
  IdentifierList
    Identifier 'a'
  Colon
  Keyword(Linkage)
  SubtypeIndication
    Name
      NameDesignatorPrefix
        Identifier 'std_logic'
