vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__interface__tests__object_declaration-7.snap
---
source: vhdl_syntax/src/parser/productions/interface.rs
expression: "to_test_text(Parser::interface_declaration, \"a : buffer std_logic\")"
---
InterfaceObjectDeclaration
  IdentifierList
    Identifier 'a'
  Colon
  Keyword(Buffer)
  SubtypeIndication
    Name
      NameDesignatorPrefix
        Identifier 'std_logic'
